# tenferro-benchmark

./: .gitignore  .gitmodules  AGENTS.md  Cargo.toml  Manifest.toml  Project.toml  README.md  build.rs  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  install_openblas.sh
.devcontainer/cuda/: Dockerfile  devcontainer.json
benchmarks/cpu/: einsum.yaml  permutation.yaml
benchmarks/gpu/: dense.yaml  einsum.yaml  linalg_jvp_vjp.yaml  permutation.yaml  sparse.yaml  tensornetwork.yaml
cpp/: CMakeLists.txt  benchmark_cpu_ops_libtorch.cpp  benchmark_gpu_cutlass.cu  benchmark_libtorch.cpp  einsum_plan.cpp  einsum_plan.h  einsum_plan_test.cpp
data/instances/: bin_batched_matmul_b32_m128_n128_k128.json  bin_batched_matmul_b32_m64_n64_k64.json  bin_batched_outer_product_compact_j16_k16_o64_t64.json  bin_batched_outer_product_noncompact_j16_k16_o64_t64.json  bin_elementwise_mul_2048x2048.json  bin_matmul_1024.json  bin_matmul_256.json  bin_outer_product_4096.json  gm_queen5_5_3.wcsp.json  lm_batch_likelihood_brackets_4_4d.json  lm_batch_likelihood_sentence_3_12d.json  lm_batch_likelihood_sentence_4_4d.json  nary_matmul_chain_64.json  permutation_patterns.json  str_matrix_chain_multiplication_100.json  str_mps_varying_inner_product_200.json  str_nw_mera_closed_120.json  str_nw_mera_open_26.json  tensornetwork_permutation_focus_step409_316.json  tensornetwork_permutation_light_415.json
data/results/cpu/einsum/20260603_184022/: cpu_ops_t1_20260603_184022.csv  cpu_ops_t1_20260603_184022.md  einsum_table_t1_20260603_184022.md  publication_gate_system-openblas_t1_quick_all_20260603_184022.csv  report.md  run.yaml
data/results/cpu/einsum/20260604_075559/: cpu_ops_report.md  cpu_ops_t1_20260604_075559.csv  cpu_ops_t1_20260604_075559.md  einsum_table_t1_20260604_075559.md  publication_gate_system-openblas_t1_quick_all_20260604_075559.csv  report.md  run.yaml
data/results/cpu/einsum/20260604_121558/: cpu_ops_report.md  cpu_ops_t1_20260604_121558.csv  cpu_ops_t1_20260604_121558.md  einsum_table_t1_20260604_121558.md  publication_gate_system-accelerate_t1_quick_all_20260604_121558.csv  report.md  run.yaml
docs/: architecture.md  cpu-benchmark-results.md  einsum-benchmarks.md  einsum-suite.md  gpu-devcontainer.md  gpu-permutation-suite.md  linux-cpu-devcontainer.md  macos-cpu.md  permutation-suite.md  pytorch-einsum-dispatch.md  results-einsum.md  results.md  setup-and-libtorch.md  tensornetwork-gpu.md
docs/superpowers/plans/: 2026-05-28-gpu-backend-comparison-phase1.md
docs/superpowers/specs/: 2026-05-28-gpu-backend-comparison-design.md
docs/test-reports/: test-feature-20260524-124626.md
examples/: svd_backward_panic_mwe.rs
result/: README.md  cpu-benchmark-results.md  einsum-lazy-value-retest.md  einsum-results.md  gpu-benchmark-results.md  results-einsum.md
result/amd-cpu/cpu/: cpu_ops.md  einsum.md  linalg_jvp_vjp.md  permutation.md
result/cpu/: cpu_ops.md  einsum.md
result/linux-cpu/cpu/: cpu_ops.md  einsum.md  linalg_jvp_jvp.md  linalg_jvp_vjp.md  permutation.md
result/mac-cpu/cpu/: cpu_ops.md  einsum.md  linalg_jvp_vjp.md  permutation.md
result/nvidia-gpu/gpu/: dense.md  einsum.md  linalg_jvp_vjp.md  permutation.md  sparse.md  tensornetwork.md
schemas/: benchmark-result.schema.json  benchmark-run.schema.json  benchmark-suite.schema.json  permutation-result.schema.json
scripts/: analyze_einsum_gaps.py  benchmark_cpu_ops_python.py  benchmark_gpu_linalg_ad.py  benchmark_gpu_permutation_python.py  benchmark_gpu_python.py  benchmark_layout.py  benchmark_permutation.jl  benchmark_python.py  clean_extern_deps.sh  collect_cpu_info.py  collect_gpu_info.py  collect_run_metadata.py  convert_tensornetwork.py  cpu_blas_provider.sh  format_cpu_ops_results.py  format_gpu_linalg_ad_results.py  format_gpu_permutation_results.py  format_gpu_results.py  format_linalg_ad_results.py  format_permutation_results.py  format_results.py  generate_gpu_linalg_jvp_vjp_yaml.py  import_einsum_dataset.py  mirror_linux_cpu_cpu_reports.sh  python_venv.sh  reproduce_linux_cpu_linalg_jvp_jvp.sh  run_all.sh  run_all_libtorch.sh  run_all_python.sh  run_all_rust.sh  run_cpu_ops.sh  run_gpu_linalg_jvp_vjp.sh  run_gpu_permutation.sh  run_gpu_suite.sh  run_permutation.sh  run_publication_gate.sh  run_tenferro_libtorch.sh  run_tensornetwork_serial.sh  setup_extern_deps.sh  setup_gpu_vendors.sh  (+4 more)
src/: lib.rs  main.rs  tensornetwork.rs
tests/: test_benchmark_intent_metadata.sh  test_clean_extern_deps.sh  test_cpu_blas_provider_policy.sh  test_cpu_ops_linalg_ad.sh  test_cpu_thread_metadata.sh  test_devcontainer_config.sh  test_einsum_gap_analyzer.sh  test_extern_dependency_paths.sh  test_gpu_benchmark_contract.sh  test_gpu_linalg_ad_results_formatter.sh  test_gpu_linalg_ad_runner_contract.sh  test_import_einsum_dataset.sh  test_instance_colmajor_metadata.sh  test_linalg_ad_results_formatter.sh  test_markdown_formatters_no_blank_eof.sh  test_native_batch_layout_labels.sh  test_permutation_result_schema.sh  test_run_all_docs_outputs.sh  test_run_all_rust_bin_selection.sh  test_setup_extern_tenferro_checkout.sh  test_strategy_dedup_helpers.sh  test_suite_instances.sh  test_suite_result_layout.sh  test_tenferro_timing_scope.sh  test_tensornetwork_contract.py
