[package]
name = "tenferro-einsum-benchmark"
version = "0.1.0"
edition = "2021"
description = "Benchmark suite for tenferro-einsum based on einsum benchmark"
build = "build.rs"

[dependencies]
tenferro-ad       = { path = "extern/tenferro-rs/tenferro-ad", default-features = false }
tenferro-einsum   = { path = "extern/tenferro-rs/tenferro-einsum", default-features = false }
tenferro-linalg   = { path = "extern/tenferro-rs/tenferro-linalg", default-features = false }
tenferro-runtime  = { path = "extern/tenferro-rs/tenferro-runtime", default-features = false }
tenferro-tensor   = { path = "extern/tenferro-rs/tenferro-tensor", default-features = false }
computegraph      = { git = "https://github.com/tensor4all/computegraph-rs.git", rev = "c20e8912560ef11166418bcea089126ef50443cc" }
num-complex = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
default = ["cpu-faer"]
cpu-faer = [
    "tenferro-ad/cpu-faer",
    "tenferro-einsum/cpu-faer",
    "tenferro-linalg/cpu-faer",
    "tenferro-runtime/cpu-faer",
    "tenferro-tensor/cpu-faer",
]
system-openblas = [
    "tenferro-ad/cpu-blas",
    "tenferro-einsum/autodiff",
    "tenferro-einsum/cpu-blas",
    "tenferro-linalg/autodiff",
    "tenferro-linalg/cpu-blas",
    "tenferro-runtime/cpu-blas",
    "tenferro-tensor/cpu-blas",
]
cuda = [
    "tenferro-ad/cuda",
    "tenferro-einsum/cuda",
    "tenferro-linalg/cuda",
]

[[bin]]
name = "publication_gate"
path = "src/bin/publication_gate.rs"
