[package]
name = "tenferro-einsum-benchmark"
version = "0.1.0"
edition = "2021"
description = "Benchmark suite for tenferro-einsum based on einsum benchmark"
build = "build.rs"

[dependencies]
tenferro-ad       = { path = "extern/tenferro-rs/crates/tenferro-ad", default-features = false }
tenferro-einsum   = { path = "extern/tenferro-rs/crates/tenferro-einsum", default-features = false }
tenferro-linalg   = { path = "extern/tenferro-rs/crates/tenferro-linalg", default-features = false }
tenferro-runtime  = { path = "extern/tenferro-rs/crates/tenferro-runtime", default-features = false }
tenferro-tensor   = { path = "extern/tenferro-rs/crates/tenferro-tensor", default-features = false }
tenferro-gpu      = { path = "extern/tenferro-rs/crates/tenferro-gpu", default-features = false, optional = true }
tenferro-cpu      = { path = "extern/tenferro-rs/crates/tenferro-cpu", default-features = false, optional = true }
num-complex = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

[features]
default = ["cpu-faer"]
cpu-faer = [
    "tenferro-ad/cpu-faer",
    "tenferro-einsum/autodiff",
    "tenferro-einsum/cpu-faer",
    "tenferro-linalg/autodiff",
    "tenferro-linalg/cpu-faer",
    "tenferro-runtime/cpu-faer",
    "dep:tenferro-cpu",
    "tenferro-cpu?/cpu-faer",
]
system-openblas = [
    "tenferro-ad/cpu-blas",
    "tenferro-ad/cpu-faer",
    "tenferro-einsum/autodiff",
    "tenferro-einsum/cpu-blas",
    "tenferro-einsum/cpu-faer",
    "tenferro-linalg/autodiff",
    "tenferro-linalg/cpu-blas",
    "tenferro-linalg/cpu-faer",
    "tenferro-runtime/cpu-blas",
    "tenferro-runtime/cpu-faer",
    "dep:tenferro-cpu",
    "tenferro-cpu?/cpu-blas",
    "tenferro-cpu?/cpu-faer",
]
system-accelerate = [
    "tenferro-ad/blas-accelerate",
    "tenferro-ad/cpu-blas",
    "tenferro-ad/cpu-faer",
    "tenferro-einsum/autodiff",
    "tenferro-einsum/blas-accelerate",
    "tenferro-einsum/cpu-blas",
    "tenferro-einsum/cpu-faer",
    "tenferro-linalg/autodiff",
    "tenferro-linalg/blas-accelerate",
    "tenferro-linalg/cpu-blas",
    "tenferro-linalg/cpu-faer",
    "tenferro-runtime/blas-accelerate",
    "tenferro-runtime/cpu-blas",
    "tenferro-runtime/cpu-faer",
    "dep:tenferro-cpu",
    "tenferro-cpu?/blas-accelerate",
    "tenferro-cpu?/cpu-blas",
    "tenferro-cpu?/cpu-faer",
]
cuda = [
    "tenferro-ad/cuda",
    "tenferro-einsum/cuda",
    "tenferro-einsum/autodiff",
    "tenferro-linalg/cuda",
    "tenferro-linalg/autodiff",
    "dep:tenferro-gpu",
    "tenferro-gpu?/cuda",
    "dep:tenferro-cpu",
    "tenferro-cpu?/cpu-faer",
]

[[bin]]
name = "publication_gate"
path = "src/bin/publication_gate.rs"

[[bin]]
name = "benchmark_gpu_rust"
path = "src/bin/benchmark_gpu_rust.rs"
required-features = ["cuda"]

[[example]]
name = "svd_backward_panic_mwe"
path = "examples/svd_backward_panic_mwe.rs"
required-features = ["cpu-faer"]
