[package]
name = "tenferro-einsum-benchmark"
version = "0.1.0"
edition = "2021"
description = "Benchmark suite for tenferro-einsum based on einsum benchmark"
build = "build.rs"

[dependencies]
tenferro-ad       = { path = "extern/tenferro-rs/crates/tenferro-ad", default-features = false }
tenferro-einsum   = { path = "extern/tenferro-rs/crates/tenferro-einsum", default-features = false }
tenferro-linalg   = { path = "extern/tenferro-rs/crates/tenferro-linalg", default-features = false }
tenferro-runtime  = { path = "extern/tenferro-rs/crates/tenferro-runtime", default-features = false }
tenferro-tensor   = { path = "extern/tenferro-rs/crates/tenferro-tensor", default-features = false }
tenferro-gpu      = { path = "extern/tenferro-rs/crates/tenferro-gpu", default-features = false, optional = true }
tenferro-cpu      = { path = "extern/tenferro-rs/crates/tenferro-cpu", default-features = false, optional = true }
num-complex = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
hptt = { version = "0.4.1", optional = true }
# Non-optional: benchmark_permutation always reports the actual size of
# tenferro's global rayon pool (rayon::current_num_threads(), sized from
# RAYON_NUM_THREADS at process start) as its `threads` field, regardless of
# any Cargo feature.
rayon = "1"
# Optional path deps on extern/strided-rs (see scripts/setup_extern_deps.sh,
# which clones it alongside extern/tenferro-rs), gated by the `strided-rs`
# feature below. Cargo resolves every path dependency's manifest to build the
# unit graph even when the feature enabling it is off, so a checkout without
# extern/strided-rs would fail `cargo build` outright regardless of
# `--features strided-rs`; that is why setup_extern_deps.sh fetches it
# unconditionally, the same as extern/tenferro-rs.
strided-perm = { path = "extern/strided-rs/strided-perm", default-features = false, optional = true }
strided-view = { path = "extern/strided-rs/strided-view", optional = true }

[features]
default = ["cpu-faer"]
# Gates the `hptt` participant in benchmark_permutation (cpu/permutation
# suite). Builds the vendored HPTT C++ library via the `hptt` crate's cmake
# build script; requires cmake and a C++ toolchain. Verified with
# `cargo check --features hptt` / `cargo build --release --features hptt` on
# both macOS (cmake installed via Homebrew, e.g. `brew install cmake`) and
# Linux; not Linux-only. If the vendored HPTT CMakeLists ever rejects a newer
# cmake (cmake >= 4 dropped compatibility with `cmake_minimum_required`
# versions below 3.5), set `CMAKE_POLICY_VERSION_MINIMUM=3.5` in the
# environment before building.
hptt = ["dep:hptt"]
# Gates the `strided-rs` participant in benchmark_permutation (cpu/permutation
# suite): strided_perm::copy_into / copy_into_col_major materializing a
# strided view built directly from the pattern's source strides, using
# extern/strided-rs's strided-perm + strided-view crates (cloned by
# scripts/setup_extern_deps.sh, mirroring how extern/tenferro-rs is fetched).
# Also enables strided-perm's own `parallel` feature (copy_into_par /
# copy_into_col_major_par) so 4-thread runs exercise strided-perm's rayon
# path, matching this repo's other rayon-backed backends.
strided-rs = ["dep:strided-perm", "dep:strided-view", "strided-perm/parallel"]
cpu-faer = [
    "tenferro-ad/cpu-faer",
    "tenferro-einsum/autodiff",
    "tenferro-einsum/cpu-faer",
    "tenferro-linalg/autodiff",
    "tenferro-linalg/cpu-faer",
    "tenferro-runtime/cpu-faer",
    "dep:tenferro-cpu",
    "tenferro-cpu?/cpu-faer",
]
system-openblas = [
    "tenferro-ad/cpu-blas",
    "tenferro-ad/cpu-faer",
    "tenferro-einsum/autodiff",
    "tenferro-einsum/cpu-blas",
    "tenferro-einsum/cpu-faer",
    "tenferro-linalg/autodiff",
    "tenferro-linalg/cpu-blas",
    "tenferro-linalg/cpu-faer",
    "tenferro-runtime/cpu-blas",
    "tenferro-runtime/cpu-faer",
    "dep:tenferro-cpu",
    "tenferro-cpu?/cpu-blas",
    "tenferro-cpu?/cpu-faer",
]
system-accelerate = [
    "tenferro-ad/blas-accelerate",
    "tenferro-ad/cpu-blas",
    "tenferro-ad/cpu-faer",
    "tenferro-einsum/autodiff",
    "tenferro-einsum/blas-accelerate",
    "tenferro-einsum/cpu-blas",
    "tenferro-einsum/cpu-faer",
    "tenferro-linalg/autodiff",
    "tenferro-linalg/blas-accelerate",
    "tenferro-linalg/cpu-blas",
    "tenferro-linalg/cpu-faer",
    "tenferro-runtime/blas-accelerate",
    "tenferro-runtime/cpu-blas",
    "tenferro-runtime/cpu-faer",
    "dep:tenferro-cpu",
    "tenferro-cpu?/blas-accelerate",
    "tenferro-cpu?/cpu-blas",
    "tenferro-cpu?/cpu-faer",
]
system-mkl = [
    "tenferro-ad/blas-mkl",
    "tenferro-ad/cpu-blas",
    "tenferro-ad/cpu-faer",
    "tenferro-einsum/autodiff",
    "tenferro-einsum/blas-mkl",
    "tenferro-einsum/cpu-blas",
    "tenferro-einsum/cpu-faer",
    "tenferro-linalg/autodiff",
    "tenferro-linalg/blas-mkl",
    "tenferro-linalg/cpu-blas",
    "tenferro-linalg/cpu-faer",
    "tenferro-runtime/blas-mkl",
    "tenferro-runtime/cpu-blas",
    "tenferro-runtime/cpu-faer",
    "dep:tenferro-cpu",
    "tenferro-cpu?/blas-mkl",
    "tenferro-cpu?/cpu-blas",
    "tenferro-cpu?/cpu-faer",
]
cuda = [
    "tenferro-ad/cuda",
    "tenferro-einsum/cuda",
    "tenferro-einsum/autodiff",
    "tenferro-linalg/cuda",
    "tenferro-linalg/autodiff",
    "dep:tenferro-gpu",
    "tenferro-gpu?/cuda",
    "dep:tenferro-cpu",
    "tenferro-cpu?/cpu-faer",
]

[[bin]]
name = "publication_gate"
path = "src/bin/publication_gate.rs"

[[bin]]
name = "benchmark_permutation"
path = "src/bin/benchmark_permutation.rs"

[[bin]]
name = "benchmark_gpu_rust"
path = "src/bin/benchmark_gpu_rust.rs"
required-features = ["cuda"]

[[bin]]
name = "benchmark_gpu_linalg_ad"
path = "src/bin/benchmark_gpu_linalg_ad.rs"
required-features = ["cuda"]

[[example]]
name = "svd_backward_panic_mwe"
path = "examples/svd_backward_panic_mwe.rs"
required-features = ["cpu-faer"]
